--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@ border-radius: 5px;
 box-shadow: 2px 5px 0 0 black;
 }
 body{
+  text-align: center;
   background:#41f4bb;
 }
 
@@ -29,23 +30,52 @@ body{
   margin: 5px;
   width:200px;
   height:200px;
-  border-radius: 5px;
+   text-align:center;
+  border-radius: 15px;
 }
 
 .image2{
     margin: 5px;
   width:200px;
   height:200px;
-  border-radius: 5px;
+   text-align:center;
+  border-radius: 15px;
 
 }
 .image3{
     margin: 5px;
   width:200px;
   height:200px;
-  border-radius: 5px;
+   text-align:center;
+  border-radius: 15px;
 
 }
-@media all and(max-width:768px) {
-  
+@media all and (max-width:768px) {
+.mainDiv{
+  background: yellow;
+  flex-wrap: wrap;
+  height: auto;
+}
+.sub1{
+  width: 100%;
+  display:flex;
+  height: 200px;
+  margin: 10px;
+}
+.sub2{
+  width: 100%;
+  display:flex;
+  height: 200px;
+  margin: 10px;
+}
+.sub3{
+  width: 100%;
+  display:flex;
+  height: 200px;
+  margin: 10px;
+}
+.image1{
+  height: 180px;
+  border-radius: 25px;
+}
 }
